# ultimate-rts-devtools

./: .gitignore  CMakeLists.txt  Makefile  README.md  centroider  centroider.c  cleanup.sh  compile.sh  config.json  kill  kill.sh  kill_sessions.sh  make_wfs_images.py  optimised_config.yaml  replay_all.sh  replay_simulation.sh  replay_wfs00.sh  replay_wfs_images.py  requirements.txt  setup.cfg  simulator.c  start  start.sh  start_bench.sh  start_sessions.sh
.config/: config_centroid.json  config_simu.json
centroidertools/: __main__.py  centroidercli.py  fit_subap_lut.py
centroidertools/wgui/: app.py
ltaomod_centroider/: CMakeLists.txt  centroider.c  centroider.h  helloworld.c  helloworld.h  ltaomod_centroider.c  ltaomod_centroider.h  slopevec.c  slopevec.h  test_centroider.sh  test_helloworld.sh
milkcentroider/: __main__.py  build_subap_lut.py  centroider.py  fit_subap_lut.py  reconstructor.py
milkcentroider/wgui/: app.py
milkcentroider/wgui/templates/: index.html
scripts/: build_subap_lut.py  cleanup.sh  fit_subap_lut.py  init_shm_centroiding.py  init_valid.py  kill_replay.sh  load_subap_lut.sh  make_simulated_data.py  play_images.py  reconstructor.py  replay_all.py  replay_simu.sh  replay_wfs00.py  replay_wfs01.py  replay_wfs_images.py  start_centroider.sh  start_replay.sh  validate_subap_lut.py
simulator/: README.md  copy_actu.py  copy_meas.py  example_rtc.py  init_mats.py  simulator.py
src/: centroider.c  centroider1.c  centroider2.c  centroider3.c  centroider4.c  centroider5.c
wgui/: app.py  kill_gui.sh  start_gui.sh
wgui/stream-frontend/: package-lock.json  package.json
wgui/stream-frontend/src/: App.js
wgui/templates/: index.html
