cmake_minimum_required(VERSION 3.10)
project(Centroider VERSION 1.0)
link_directories(/usr/local/milk-1.03.00/lib)
include_directories(/usr/local/milk-1.03.00/include)
add_executable(centroider1 src/centroider1.c)
add_executable(centroider2 src/centroider2.c)
add_executable(centroider3 src/centroider3.c)
add_executable(centroider4 src/centroider4.c)
add_executable(centroider5 src/centroider5.c)
target_link_libraries(centroider1 CLIcore ImageStreamIO milkCOREMODiofits milkCOREMODmemory milkCOREMODtools)
target_link_libraries(centroider2 CLIcore ImageStreamIO milkCOREMODiofits milkCOREMODmemory milkCOREMODtools)
target_link_libraries(centroider3 CLIcore ImageStreamIO milkCOREMODiofits milkCOREMODmemory milkCOREMODtools)
target_link_libraries(centroider4 CLIcore ImageStreamIO milkCOREMODiofits milkCOREMODmemory milkCOREMODtools)
target_link_libraries(centroider5 CLIcore ImageStreamIO milkCOREMODiofits milkCOREMODmemory milkCOREMODtools)
