[metadata]
name = ultimate-rts-devtools
version = 0.1.3
author = Jesse Cranney
author_email = jesse.cranney@anu.edu.au
description = devtools for ultimate Subaru RTS
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jcranney/ultimate-rts-devtools.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent

[options.entry_points]
console_scripts =
    cent = centroidertools.centroidercli:main

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    pyMilk
    CacaoProcessTools
    astropy
include_package_data = True
